CZHDEV-3178: correct spacing

--- a/src/modules/linklist/linklist.scss
+++ b/src/modules/linklist/linklist.scss
@@ -18,4 +18,8 @@
     padding: 0;
     list-style-type: none;
   }
+
+  &:not(.mdl-linklist__title ~ .mdl-linklist__list) {
+    @include sizeCurve(margin-top, medium);
+  }
 }
